2007-02-05  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  src/rbosa.c:
	Smarter #get method, if the resolved object doesn't inherit from the 
	desired class, and if it has a property method with a class key/value,
	return a new descriptor of the desired class.

2007-02-03  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  bin/rdoc-osa:
	Adapted the generated RDoc to mention the possibility to pass optional
	parameters as a Hash key/value object.

2007-02-02  Laurent Sansonetti  <lsansonetti@apple.com>

	* tests/tc_textedit.rb,
	  src/lib/rbosa_properties.rb,
	  src/lib/rbosa.rb,
	  sample/TextEdit/hello_world.rb:
	Auto-convert codes to symbols when converting Ruby Hash objects into OSA
	records. Register the application properties. Added a test case. Updated 
	sample code.

	* rubyosa.gemspec:
	Synchronized (using 0.2.1 for the version though).

	* src/lib/rbosa.rb:
	Same conversion behavior for 'type' than 'type class'. 

2007-02-01  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  src/rbosa.c:
	Better inspect methods for OSA::Element and OSA::ObjectSpecifierList.

2007-01-31  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  src/rbosa_sdef.c:
	Better error messages for OSA.app and #merge.

	* extconf.rb,
	  bin/rdoc-osa,
	  data/rubyosa/rdoc_html.rb,
	  post-install.rb:
	- Better RDoc generation (removed the Files frame, references to the generated
	  dummy Ruby file and source code, changed the default HTML title) ;
	- Make sure the rdoc-osa tool and the new template are properly installed in 
	  the right locations by 'make install'.

	* src/rbosa.c:
	Make sure we send events with the user-can-interact flag set on.

2007-01-30  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	When trying to merge an sdef in the current application, if the LaunchServices
	couldn't locate it by its name, let's be clever and look inside the 
	ScriptingAdditions locations.
